Create POST/reports endpoint
